MOBILE: fix overlapping text and header

--- a/src/style/resume.css
+++ b/src/style/resume.css
@@ -105,6 +105,7 @@
         overflow-x: clip;
         position: absolute;
         margin: 0 auto;
+        top: 80px;
         left: 0;
         max-width: 100vw;
         overflow-y: scroll;
